--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+	html {
+		font-family: Helvetica, "Trebuchet MS", Verdana, sans-serif;
+	}	
 	body {
 		background-color: #E4C461;
 		font-family: "Open Sans";
